--- a/Muestra/Secciones/CriteriosDeSeleccion.tex
+++ b/Muestra/Secciones/CriteriosDeSeleccion.tex
@@ -14,7 +14,7 @@ cuyo punto de entrada se ubica en el script
 \section{Búsqueda en Gaia}  \label{muestra:crit_seleccion:busqueda_fotometrica}
 
 Para obtener la muestra inicial de objetos de interés acudimos a la base de
-datos de Gaia. Tal como es descrito en la sección \ref{muestra:sec:gaia} la
+datos de Gaia. Tal como es descrito en la \refthesissection{muestra:sec:gaia} la
 selección de objetos fue llevada a cabo dentro del \textit{Gaia Archive}
 utilizando su interfaz de ADQL. Sin embargo, los criterios definidos por Szkody
 y colaboradores solo fueron definidos para el sistema fotométrico de SDSS; para
