--- a/Tesis.tex
+++ b/Tesis.tex
@@ -416,12 +416,19 @@
 \input{Apendice/GaiaADQL.tex}
 %-------------------------------------REFERENCES
 \chapter*{Agradecimientos}
-This work has made use of data from the European Space Agency (ESA) mission {\it
-        Gaia} (\url{https://www.cosmos.esa.int/gaia}), processed by the Gaia Data
-Processing and Analysis Consortium (DPAC,
+This work has made use of data from the European Space Agency (ESA) mission
+\textit{Gaia} (\url{https://www.cosmos.esa.int/gaia}), processed by the Gaia
+Data Processing and Analysis Consortium (DPAC,
 \url{https://www.cosmos.esa.int/web/gaia/dpac/consortium}). Funding for the DPAC
 has been provided by national institutions, in particular the institutions
 participating in the {\it Gaia} Multilateral Agreement.
+
+Based on observations obtained with the Samuel Oschin Telescope 48-inch and the 60-inch Telescope at the Palomar
+Observatory as part of the Zwicky Transient Facility project. ZTF is supported by the National Science Foundation under Grants
+No. AST-1440341 and AST-2034437 and a collaboration including current partners Caltech, IPAC, the Oskar Klein Center at
+Stockholm University, the University of Maryland, University of California, Berkeley , the University of Wisconsin at Milwaukee,
+University of Warwick, Ruhr University, Cornell University, Northwestern University and Drexel University. Operations are
+conducted by COO, IPAC, and UW.
 
 This research made use of Astropy,\footnote{\url{http://www.astropy.org}} a
 community-developed core Python package for Astronomy \citeyearparen{astropy}.
