--- a/ref.bib
+++ b/ref.bib
@@ -712,3 +712,58 @@ ADS Bibcode: 1959cbs..book.....K},
 	date = {2010-01-31},
 	langid = {english}
 }
+
+@article{bailer-jones_estimating_distances_gaia_edr3_2021,
+	title = {Estimating Distances from Parallaxes. V. Geometric and Photogeometric Distances to 1.47 Billion Stars in Gaia Early Data Release 3},
+	volume = {161},
+	issn = {0004-6256},
+	url = {https://ui.adsabs.harvard.edu/abs/2021AJ....161..147B},
+	doi = {10.3847/1538-3881/abd806},
+	abstract = {Stellar distances constitute a foundational pillar of astrophysics. The publication of 1.47 billion stellar parallaxes from Gaia is a major contribution to this. Despite Gaia's precision, the majority of these stars are so distant or faint that their fractional parallax uncertainties are large, thereby precluding a simple inversion of parallax to provide a distance. Here we take a probabilistic approach to estimating stellar distances that uses a prior constructed from a three-dimensional model of our Galaxy. This model includes interstellar extinction and Gaia's variable magnitude limit. We infer two types of distance. The first, geometric, uses the parallax with a direction-dependent prior on distance. The second, photogeometric, additionally uses the color and apparent magnitude of a star, by exploiting the fact that stars of a given color have a restricted range of probable absolute magnitudes (plus extinction). Tests on simulated data and external validations show that the photogeometric estimates generally have higher accuracy and precision for stars with poor parallaxes. We provide a catalog of 1.47 billion geometric and 1.35 billion photogeometric distances together with asymmetric uncertainty measures. Our estimates are quantiles of a posterior probability distribution, so they transform invariably and can therefore also be used directly in the distance modulus ( \$5\{{\textbackslash}mathrm\{log\}\}\_\{10\}r{\textbackslash},-{\textbackslash},5\$ ). The catalog may be downloaded or queried using {ADQL} at various sites (see http://www.mpia.de/{\textasciitilde}calj/gedr3\_distances.html), where it can also be cross-matched with the Gaia catalog.},
+	pages = {147},
+	journaltitle = {The Astronomical Journal},
+	author = {Bailer-Jones, C. A. L. and Rybizki, J. and Fouesneau, M. and Demleitner, M. and Andrae, R.},
+	urldate = {2024-06-27},
+	date = {2021-03-01},
+	note = {Publisher: {IOP}
+{ADS} Bibcode: 2021AJ....161..147B},
+	keywords = {10, 1197, 1231, 1618, 1889, 1900, 205, 394, 622, 80, Absolute magnitude, Astrometry, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics, Bayesian statistics, Catalogs, Distance indicators, Galaxy structure, Markov chain Monte Carlo, Parallax, Photometric parallax, Stellar parallax}
+}
+
+@article{bellm_ztf_overview_performance_first_results_2018,
+	title = {The Zwicky Transient Facility: System Overview, Performance, and First Results},
+	volume = {131},
+	issn = {1538-3873},
+	url = {https://dx.doi.org/10.1088/1538-3873/aaecbe},
+	doi = {10.1088/1538-3873/aaecbe},
+	shorttitle = {The Zwicky Transient Facility},
+	abstract = {The Zwicky Transient Facility ({ZTF}) is a new optical time-domain survey that uses the Palomar 48 inch Schmidt telescope. A custom-built wide-field camera provides a 47 deg2 field of view and 8 s readout time, yielding more than an order of magnitude improvement in survey speed relative to its predecessor survey, the Palomar Transient Factory. We describe the design and implementation of the camera and observing system. The {ZTF} data system at the Infrared Processing and Analysis Center provides near-real-time reduction to identify moving and varying objects. We outline the analysis pipelines, data products, and associated archive. Finally, we present on-sky performance analysis and first scientific results from commissioning and the early survey. {ZTF}’s public alert stream will serve as a useful precursor for that of the Large Synoptic Survey Telescope.},
+	pages = {018002},
+	number = {995},
+	journaltitle = {Publications of the Astronomical Society of the Pacific},
+	shortjournal = {{PASP}},
+	author = {Bellm, Eric C. and Kulkarni, Shrinivas R. and Graham, Matthew J. and Dekany, Richard and Smith, Roger M. and Riddle, Reed and Masci, Frank J. and Helou, George and Prince, Thomas A. and Adams, Scott M. and Barbarino, C. and Barlow, Tom and Bauer, James and Beck, Ron and Belicki, Justin and Biswas, Rahul and Blagorodnova, Nadejda and Bodewits, Dennis and Bolin, Bryce and Brinnel, Valery and Brooke, Tim and Bue, Brian and Bulla, Mattia and Burruss, Rick and Cenko, S. Bradley and Chang, Chan-Kao and Connolly, Andrew and Coughlin, Michael and Cromer, John and Cunningham, Virginia and De, Kishalay and Delacroix, Alex and Desai, Vandana and Duev, Dmitry A. and Eadie, Gwendolyn and Farnham, Tony L. and Feeney, Michael and Feindt, Ulrich and Flynn, David and Franckowiak, Anna and Frederick, S. and Fremling, C. and Gal-Yam, Avishay and Gezari, Suvi and Giomi, Matteo and Goldstein, Daniel A. and Golkhou, V. Zach and Goobar, Ariel and Groom, Steven and Hacopians, Eugean and Hale, David and Henning, John and Ho, Anna Y. Q. and Hover, David and Howell, Justin and Hung, Tiara and Huppenkothen, Daniela and Imel, David and Ip, Wing-Huen and Ivezić, Željko and Jackson, Edward and Jones, Lynne and Juric, Mario and Kasliwal, Mansi M. and Kaspi, S. and Kaye, Stephen and Kelley, Michael S. P. and Kowalski, Marek and Kramer, Emily and Kupfer, Thomas and Landry, Walter and Laher, Russ R. and Lee, Chien-De and Lin, Hsing Wen and Lin, Zhong-Yi and Lunnan, Ragnhild and Giomi, Matteo and Mahabal, Ashish and Mao, Peter and Miller, Adam A. and Monkewitz, Serge and Murphy, Patrick and Ngeow, Chow-Choong and Nordin, Jakob and Nugent, Peter and Ofek, Eran and Patterson, Maria T. and Penprase, Bryan and Porter, Michael and Rauch, Ludwig and Rebbapragada, Umaa and Reiley, Dan and Rigault, Mickael and Rodriguez, Hector and Roestel, Jan van and Rusholme, Ben and Santen, Jakob van and Schulze, S. and Shupe, David L. and Singer, Leo P. and Soumagnac, Maayane T. and Stein, Robert and Surace, Jason and Sollerman, Jesper and Szkody, Paula and Taddia, F. and Terek, Scott and Sistine, Angela Van and Velzen, Sjoert van and Vestrand, W. Thomas and Walters, Richard and Ward, Charlotte and Ye, Quan-Zhi and Yu, Po-Chieh and Yan, Lin and Zolkower, Jeffry},
+	urldate = {2024-06-28},
+	date = {2018-12},
+	langid = {english},
+	note = {Publisher: The Astronomical Society of the Pacific}
+}
+
+@article{masci_ztf_data_processing_products_archive_2018,
+	title = {The Zwicky Transient Facility: Data Processing, Products, and Archive},
+	volume = {131},
+	issn = {1538-3873},
+	url = {https://dx.doi.org/10.1088/1538-3873/aae8ac},
+	doi = {10.1088/1538-3873/aae8ac},
+	shorttitle = {The Zwicky Transient Facility},
+	abstract = {The Zwicky Transient Facility ({ZTF}) is a new robotic time-domain survey currently in progress using the Palomar 48-inch Schmidt Telescope. {ZTF} uses a 47 square degree field with a 600 megapixel camera to scan the entire northern visible sky at rates of ∼3760 square degrees/hour to median depths of g ∼ 20.8 and r ∼ 20.6 mag ({AB}, 5σ in 30 sec). We describe the Science Data System that is housed at {IPAC}, Caltech. This comprises the data-processing pipelines, alert production system, data archive, and user interfaces for accessing and analyzing the products. The real-time pipeline employs a novel image-differencing algorithm, optimized for the detection of point-source transient events. These events are vetted for reliability using a machine-learned classifier and combined with contextual information to generate data-rich alert packets. The packets become available for distribution typically within 13 minutes (95th percentile) of observation. Detected events are also linked to generate candidate moving-object tracks using a novel algorithm. Objects that move fast enough to streak in the individual exposures are also extracted and vetted. We present some preliminary results of the calibration performance delivered by the real-time pipeline. The reconstructed astrometric accuracy per science image with respect to Gaia {DR}1 is typically 45 to 85 milliarcsec. This is the {RMS} per-axis on the sky for sources extracted with photometric S/N ≥ 10 and hence corresponds to the typical astrometric uncertainty down to this limit. The derived photometric precision (repeatability) at bright unsaturated fluxes varies between 8 and 25 millimag. The high end of these ranges corresponds to an airmass approaching ∼2—the limit of the public survey. Photometric calibration accuracy with respect to Pan-{STARRS}1 is generally better than 2\%. The products support a broad range of scientific applications: fast and young supernovae; rare flux transients; variable stars; eclipsing binaries; variability from active galactic nuclei; counterparts to gravitational wave sources; a more complete census of Type Ia supernovae; and solar-system objects.},
+	pages = {018003},
+	number = {995},
+	journaltitle = {Publications of the Astronomical Society of the Pacific},
+	shortjournal = {{PASP}},
+	author = {Masci, Frank J. and Laher, Russ R. and Rusholme, Ben and Shupe, David L. and Groom, Steven and Surace, Jason and Jackson, Edward and Monkewitz, Serge and Beck, Ron and Flynn, David and Terek, Scott and Landry, Walter and Hacopians, Eugean and Desai, Vandana and Howell, Justin and Brooke, Tim and Imel, David and Wachter, Stefanie and Ye, Quan-Zhi and Lin, Hsing-Wen and Cenko, S. Bradley and Cunningham, Virginia and Rebbapragada, Umaa and Bue, Brian and Miller, Adam A. and Mahabal, Ashish and Bellm, Eric C. and Patterson, Maria T. and Jurić, Mario and Golkhou, V. Zach and Ofek, Eran O. and Walters, Richard and Graham, Matthew and Kasliwal, Mansi M. and Dekany, Richard G. and Kupfer, Thomas and Burdge, Kevin and Cannella, Christopher B. and Barlow, Tom and Sistine, Angela Van and Giomi, Matteo and Fremling, Christoffer and Blagorodnova, Nadejda and Levitan, David and Riddle, Reed and Smith, Roger M. and Helou, George and Prince, Thomas A. and Kulkarni, Shrinivas R.},
+	urldate = {2024-07-01},
+	date = {2018-12},
+	langid = {english},
+	note = {Publisher: The Astronomical Society of the Pacific}
+}
