--- a/Muestra/Secciones/SzkodySearchSDSS.tex
+++ b/Muestra/Secciones/SzkodySearchSDSS.tex
@@ -19,16 +19,17 @@ antes del año de lanzamiento de SDSS, Krisciunas y colaboradores lograron
 obtener observaciones utilizando equipo cuyas características se asemejan a las
 de los instrumentos utilizados para SDSS. Partiendo de estos resultados, Szkody
 y colaboradores determinaron criterios en las regiones azules y rojas del
-espectro, cuyos valores se encuentran en la ecuaciones en 
-\ref{muestra:szkody2002:criterioeqs}.
+espectro, cuyos valores se encuentran en las  
+\refequations{muestra:szkody2002:criterioeqs}.
 
-\begin{equation} \label{muestra:szkody2002:criterioeqs}
+\begin{equation}
 	\begin{split}
 		& u^* - g^* < 0.45 \\
 		& g^* - r^* < 0.7 \\
 		& r^* - i^* > 0.30 \\
 		& i^* - z^* > 0.4
 	\end{split}
+	\label{muestra:szkody2002:criterioeqs}
 \end{equation}
 
 Una vez recabada la muestra de candidatas a observar, Szkody y colaboradores
@@ -39,8 +40,8 @@ el \textit{Apache Point Observatory} y observaciones fotométricas utilizando el
 telescopio de 0.76m en el \textit{Manastash Ridge Observatory} de la Universidad
 de Washington. En total identificaron 22 sistemas como variables cataclísmicas,
 incluyendo 3 objetos previamente estudiados e identificados como tal. Presentan
-la concentración de los objetos en el diagrama color-color, vistos en la figura
-\ref{szkody2002ColorColorVCs}. 
+la concentración de los objetos en el diagrama color-color, vistos en la
+\reffigure{szkody2002ColorColorVCs}. 
 
 \begin{figure}[!ht]
 	\centering
